[package]
name = "stable-borrow-state"
version = "0.1.0"
authors = ["Tim Ryan <id@timryan.org>"]
description = "Hack to use borrow_stable method on stable until #27733 is resolved."
license = "MIT"
homepage = "https://github.com/tcr/stable-borrow-state"
repository = "https://github.com/tcr/stable-borrow-state"

[dependencies]
